# persona-cli

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/persona/: __init__.py  __main__.py  audio_sink.py  cli.py  context.py  generation.py  piper_defaults.py  retrieval.py  runtime_state.py  sentence_split.py  streaming.py  voice_client.py  voice_spec.py
tests/persona/: test_audio_sink.py  test_cli_think.py  test_cli_voice.py  test_context.py  test_fatigue.py  test_generation.py  test_inventory_cli.py  test_piper_defaults.py  test_retrieval.py  test_runtime_state.py  test_scenario.py  test_scoring.py  test_sentence_split.py  test_streaming.py  test_voice_client.py  test_voice_invariants.py  test_voice_spec.py
